--- a/blogpost.html
+++ b/blogpost.html
@@ -6,10 +6,8 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Cabecera
-            </div>
-            <div id="cabecera 2">
-                doble cabecera
+                Hyperblog
+                <span id="tagline">Tu blog de cabecera</span>
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
